base_infrastructure/2-vpc.tf

resource "aws_vpc" "hr-app-vpc" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "hr-app-vpc"
  }
}
